fix rh overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,7 @@
 /*Semantic UI*/
-
-body {
+html, body {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
+    overflow-x: hidden;
 }
 
 section {
